--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home Page
 <br/>
 <div class="container">
 	<div class="row">
-		<div class="threecol">
+		<div class="fourcol">
 			<div class="background">
 			  	<p>
 			    	Welcome to Nicola's Lair, <a rel="me" href="http://ar.linkedin.com/in/nicolasoga">I'm a programmer</a>, my favorite programming language is ruby. 
@@ -17,7 +17,7 @@ title: Home Page
 			</div>
 		</div>
 
-		<div class="threecol">
+		<div class="fourcol">
 			<div class="background">
 			  <h2>Blog Posts</h2>
 
@@ -37,7 +37,7 @@ title: Home Page
 			</div>
 		</div>
 
-		<div class="threecol last">
+		<div class="fourcol last">
 			<div class="background">
 				<script src="http://widgets.twimg.com/j/2/widget.js"></script>
 				<script>
