--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home Page
 <div class="container">
 	<div class="row">
 		<div class="fourcol">
-			<div class="background">
+			<div class="background min_height">
 			  	<p>
 			    	Welcome to Nicola's Lair, <a rel="me" href="http://ar.linkedin.com/in/nicolasoga">I'm a programmer</a>, my favorite programming language is ruby. 
 			  	</p>
@@ -18,17 +18,14 @@ title: Home Page
 		</div>
 
 		<div class="fourcol">
-			<div class="background">
-			  <h2>Blog Posts</h2>
-
+			<div class="background min_height">
+				<h5>Blog Posts</h5>
                 <p>
-					<ul>
+					<ul class="posts">
 						{% for post in site.posts %}
 						  <li>
-						    <strong>{{ post.date | date_to_string }}</strong>
-
-						    &raquo;
-						    
+						    <small>{{ post.date | date_to_string }}</small>
+						    <br/>
 						    <a href="{{ post.url }}">{{ post.title }}</a>
 						  </li>
 						{% endfor %}
@@ -38,7 +35,7 @@ title: Home Page
 		</div>
 
 		<div class="fourcol last">
-			<div class="background">
+			<div class="background min_height">
 				<script src="http://widgets.twimg.com/j/2/widget.js"></script>
 				<script>
 				new TWTR.Widget({
@@ -46,8 +43,8 @@ title: Home Page
 				  type: 'profile',
 				  rpp: 4,
 				  interval: 30000,
-				  width: 250,
-				  height: 300,
+				  width: 305,
+				  height: 410,
 				  theme: {
 				    shell: {
 				      background: '#b3ebbb',
