--- a/index.html
+++ b/index.html
@@ -1,71 +1,13 @@
 ---
+permalink: /
 layout: default
-title: Home Page
+title: nicooga's Blog
 ---
-<br/>
-<div class="container">
-	<div class="row">
-		<div class="fourcol">
-			<div class="background min_height">
-			  	<p>
-			    	Welcome to Nicola's Lair, <a rel="me" href="http://ar.linkedin.com/in/nicolasoga">I'm a programmer</a>, my favorite programming language is ruby. 
-			  	</p>
 
-			  	<p>
-			   		I host some of <a href="https://github.com/nicooga">my software projects</a> at github.
-			  	</p>
-			</div>
-		</div>
+<h3>Posts:</h3>
 
-		<div class="fourcol">
-			<div class="background min_height">
-				<h5>Blog Posts</h5>
-                <p>
-					<ul class="posts">
-						{% for post in site.posts %}
-						  <li>
-						    <small>{{ post.date | date_to_string }}</small>
-						    <br/>
-						    <a href="{{ post.url }}">{{ post.title }}</a>
-						  </li>
-						{% endfor %}
-					</ul>
-				</p>
-			</div>
-		</div>
-
-		<div class="fourcol last">
-			<div class="background min_height">
-				<script src="http://widgets.twimg.com/j/2/widget.js"></script>
-				<script>
-				new TWTR.Widget({
-				  version: 2,
-				  type: 'profile',
-				  rpp: 4,
-				  interval: 30000,
-				  width: 305,
-				  height: 410,
-				  theme: {
-				    shell: {
-				      background: '#b3ebbb',
-				      color: '#000000'
-				    },
-				    tweets: {
-				      background: '#ffffff',
-				      color: '#ed1717',
-				      links: '#000000'
-				    }
-				  },
-				  features: {
-				    scrollbar: true,
-				    loop: true,
-				    live: true,
-				    behavior: 'default'
-				  }
-				}).render().setUser('nicooga').start();
-				</script>
-			</div>
-		</div>
-	</div>
-</div>
-<br/>
+<ul class="nav nav-pills nav-stacked">
+{% for post in site.posts %}
+  <li><a class="act" href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
