--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,12 @@
-<div id='root' />
+<html>
+  <head>
+  </head>
+
+  <body>
+    <div id='root' />
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js'></script>
+    <script type='text/javascript'>
+      emailjs.init('user_7yA9y7KpfUJF94DMF1hC2');
+    </script>
+  </body>
+</html>
