--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Nicolas Oga</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="google-site-verification" content="Mfsvv8pOxDKuqjsetOQyMFQfO1eDwxyFXN5waii4BMw" />
   </head>
