WIP: raw integration with comments service

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Nicolas Oga</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name="google-site-verification" content="Mfsvv8pOxDKuqjsetOQyMFQfO1eDwxyFXN5waii4BMw" />
+    <meta name='google-site-verification' content='Mfsvv8pOxDKuqjsetOQyMFQfO1eDwxyFXN5waii4BMw' />
   </head>
 
   <body>
@@ -11,5 +11,6 @@
     <script type='text/javascript'>
       emailjs.init('user_7yA9y7KpfUJF94DMF1hC2');
     </script>
+    <script src='' async defer></script>
   </body>
 </html>
