--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
+    <title>Nicolas Oga</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name="google-site-verification" content="Mfsvv8pOxDKuqjsetOQyMFQfO1eDwxyFXN5waii4BMw" />
+    <meta name='google-site-verification' content='Mfsvv8pOxDKuqjsetOQyMFQfO1eDwxyFXN5waii4BMw' />
   </head>
 
   <body>
@@ -10,5 +11,6 @@
     <script type='text/javascript'>
       emailjs.init('user_7yA9y7KpfUJF94DMF1hC2');
     </script>
+    <script src='' async defer></script>
   <script type="text/javascript" src="/bundle.js"></script></body>
 </html>
