--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     </style>
 
-    <meta HTTP-EQUIV='refresh' CONTENT='0;URL=http://nicolasoga.com.ar/'>
+    <meta HTTP-EQUIV='refresh' CONTENT='0;URL=https://nicolasoga.com.ar/'>
   </head>
 
   <body>
